--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,10 @@
+@import '../../vars.css';
 * {
     font-family: Raleway;
 }
 
 .navbar {
-    background-color: #162D45;
+    background-color: var(--color-darkestBlue);
     padding: 10px 7%;
     display: flex;
     align-items: center;
@@ -12,12 +13,13 @@
 }
 
 .navButton {
-    padding: 5px;
+    color: white;
+    background-color: var(--color-darkestBlue);
     border: 1px solid white;
     border-radius: 5px;
     font-family: Lato;
     font-size: 14px;
-    padding: 5px 20px;
+    padding: var(--padding-top-smallBtn) var(--padding-sides-smallBtn);
     cursor: pointer;
 }
 
