--- a/frontend/src/components/AboutBulletPoint/AboutBulletPoint.module.css
+++ b/frontend/src/components/AboutBulletPoint/AboutBulletPoint.module.css
@@ -1,11 +1,16 @@
+@import '../../vars.css';
 .text {
-    font-size: 18px;
+    font-size: 16px;
     font-family: Lato;
-    font-weight: 200;
+    font-weight: 400;
 }
 
 .title {
     font-family: Raleway;
-    font-weight: 900;
-    font-size: 26px;
+    font-weight: 500;
+    font-size: 22px;
+}
+
+.container {
+    padding-bottom: 15px;
 }
