--- a/frontend/src/components/HomeIntro/HomeIntro.module.css
+++ b/frontend/src/components/HomeIntro/HomeIntro.module.css
@@ -3,11 +3,13 @@
 .container {
     text-align: center;
     color: white;
-    padding-top: 150px;
+    padding-top: 100px;
     z-index: 1;
     width: 50%;
     margin: auto;
     border: 4px solid orange;
+    position: relative;
+    height: 80vh;
 }
 
 .siteName {
@@ -47,6 +49,8 @@
 }
 
 .submitContainer {
+    position: absolute;
+    bottom: 0%;
     text-align: left;
     font-size: 22px;
     margin-top: 100px;
@@ -57,5 +61,13 @@
 }
 
 #searchDetails {
+    position: absolute;
+    top: 40px;
+    z-index: 1;
     text-align: right;
+}
+
+.results {
+    /* position: absolute; */
+    z-index: 2;
 }
