--- a/frontend/src/components/Searchbar/Searchbar.module.css
+++ b/frontend/src/components/Searchbar/Searchbar.module.css
@@ -35,10 +35,16 @@
 
 .results {
     border: 1px solid yellow;
-    width: 90%;
+    width: 80%;
     margin-left: 5%;
+    margin-top: 5px;
     position: relative;
     z-index: 3;
+    background-color: white;
+    padding: 5px 5px;
+    max-height: 200px;
+    overflow-x: scroll;
+    border-radius: 6px;
 }
 
 .prompt {
