--- a/frontend/src/components/Searchbar/components/Result.module.css
+++ b/frontend/src/components/Searchbar/components/Result.module.css
@@ -1,3 +1,17 @@
 .result {
-    border: 1px solid red;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 0px;
+    font-family: lato;
+    font-size: 16;
+    background-color: white;
+    color: #676767;
+    text-align: left;
+    padding-left: 10px;
+    margin-bottom: 2px;
+    cursor: pointer;
+}
+
+.result:hover {
+    background-color: #D1E2FF;
 }
