--- a/frontend/src/screens/Submit/components/FormError.module.css
+++ b/frontend/src/screens/Submit/components/FormError.module.css
@@ -1,5 +1,10 @@
 .error {
-    background-color: red;
-    color: white;
-    padding: 5px;
+    background-color: #FFC4C4;
+    color: #FF1010;
+    padding: 10px;
+    margin: 5px 0px;
+    font-family: lato;
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 9px;
 }
