--- a/frontend/src/screens/Submit/Submit.module.css
+++ b/frontend/src/screens/Submit/Submit.module.css
@@ -1,20 +1,48 @@
 .container {
     width: 40%;
-    border: 1px solid red;
     margin: auto;
-    padding: 40px;
     border-radius: 15px;
-    text-align: right;
+    text-align: left;
+    position: relative;
+}
+
+@media (max-width: 1000px) {
+    .container {
+        width: 60%;
+    }
+}
+
+@media (max-width: 750px) {
+    .container {
+        width: 80%;
+    }
+}
+
+.back {
+    color: #162D45;
+    font-family: lato;
+    font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 .form {
     text-align: left;
+    border-radius: 15px;
+    box-shadow: 0px 3px 6px rgb(92, 92, 92);
+    padding: 40px 40px 40px 40px;
 }
 
 .break {
     color: #162D45;
     margin-top: 3px;
     margin-bottom: 20px;
+}
+
+.icon {
+    position: absolute;
+    left: 8%;
+    top: 40px;
 }
 
 .label {
@@ -51,7 +79,6 @@
     font-family: lato;
     color: rgb(102, 102, 102);
     margin: auto;
-    text-align: right;
 }
 
 .button {
