--- a/frontend/src/components/Navbar/components/Logo.module.css
+++ b/frontend/src/components/Navbar/components/Logo.module.css
@@ -1,5 +1,7 @@
 .logo {
-    font-family: palanquin;
+    font-family: lato;
     font-size: 18px;
     font-weight: "bold";
+    text-decoration: none;
+    color: white;
 }
