--- a/frontend/src/components/HomeIntro/HomeIntro.module.css
+++ b/frontend/src/components/HomeIntro/HomeIntro.module.css
@@ -1,5 +1,8 @@
 @import '../../vars.css';
 
+.image {
+    margin-right: 10px;
+}
 .container {
     text-align: center;
     color: white;
@@ -7,18 +10,19 @@
     z-index: 1;
     width: 50%;
     margin: auto;
-    border: 4px solid orange;
     position: relative;
     height: 80vh;
+    max-width: 750px;
 }
 
 .siteName {
     display: flex;
     margin: auto;
+    margin-bottom: 20px;
     align-items: center;
     justify-content: center;
     font-family: palanquin;
-    font-size: 2.875rem;
+    font-size: 46px;
     font-weight: bold;
 }
 
@@ -33,6 +37,7 @@
     font-size: 16px;
     font-family: lato;
     font-weight: regular;
+    margin-bottom: 20px;
 }
 
 .submitBtn {
@@ -51,13 +56,16 @@
 .submitContainer {
     position: absolute;
     bottom: 0%;
+    left: 10%;
     text-align: left;
     font-size: 22px;
     margin-top: 100px;
 }
 
 #submitPrompt {
-    font-size: 1.375rem;
+    font-size: 22px;
+    font-weight: 400;
+    font-family: raleway;
 }
 
 #searchDetails {
