changed graphs to chartjs implementation

--- a/frontend/src/screens/Data/Data.module.css
+++ b/frontend/src/screens/Data/Data.module.css
@@ -13,3 +13,15 @@
     width: 500px;
     height: 500px;
 }
+
+.chartContainer {
+    width: 50%;
+}
+
+.lineContainer {
+    width: 30%;
+}
+
+.scatterContainer {
+    width: 50%;
+}
