--- a/frontend/src/components/ReviewsSidebar/components/TeachesCard/TeachesCard.module.css
+++ b/frontend/src/components/ReviewsSidebar/components/TeachesCard/TeachesCard.module.css
@@ -7,6 +7,12 @@
     border-radius: 8px;
     text-align: left;
     text-decoration: none;
+    position: relative;
+    max-width: 500px;
+}
+
+.link:hover {
+    left: 10px;
 }
 
 .title {
@@ -25,4 +31,18 @@
     width: 100%;
     margin: auto;
     margin-top: 15px;
+}
+
+@media (max-width: 1200px) {
+    .link {
+        display: inline-block;
+        margin: 3px;
+    }
+    .container {
+        margin-top: 0px;
+        width: 64%;
+        text-align: left;
+        max-height: 200px;
+        overflow: scroll;
+    }
 }
