--- a/frontend/src/components/Reviews/components/ReviewsTexts/components/ReviewsText.module.css
+++ b/frontend/src/components/Reviews/components/ReviewsTexts/components/ReviewsText.module.css
@@ -5,6 +5,8 @@
     width: 100%;
     box-shadow: 0px 3px 6px #B9B9B9;
     text-align: left;
+    position: relative;
+    transition: all .5s ease;
 }
 
 .title {
@@ -53,4 +55,15 @@
     background-color: white;
     margin-right: 40px;
     margin-top: 20px;
+}
+
+@media (max-width: 500px) {
+    .container {
+        padding: 30px 30px;
+        max-height: 500px;
+        overflow-y: hidden;
+    }
+    .expanded {
+        max-height: 1000px;
+    }
 }
