--- a/frontend/src/components/ReviewsSidebar/ReviewsSidebar.module.css
+++ b/frontend/src/components/ReviewsSidebar/ReviewsSidebar.module.css
@@ -1,11 +1,20 @@
 .container {
     display: flex;
     flex-direction: column;
+    border: 3px solid red;
+    text-align: center;
+    padding: 20px;
 }
 
 @media (max-width: 1200px) {
     .container {
         flex-direction: row;
         justify-content: space-between;
+    }
+}
+
+@media (max-width: 500px) {
+    .container {
+        flex-direction: column;
     }
 }
