--- a/frontend/src/components/Reviews/Reviews.module.css
+++ b/frontend/src/components/Reviews/Reviews.module.css
@@ -1,55 +1,55 @@
-@import '../../vars.css';
+@import "../../vars.css";
 .dropdown {
-    margin-top: 3px;
-    border: 2px solid #284F93;
-    position: absolute;
-    left: 200px;
-    z-index: 1;
-    list-style: none;
-    background-color: white;
-    padding: 0px 10px 10px 10px;
-    font-size: 16px;
-    font-family: lato;
-    color: #284F93;
-    text-align: left;
-    border-radius: 6px;
+  margin-top: 3px;
+  border: 2px solid #284f93;
+  position: absolute;
+  left: 200px;
+  z-index: 1;
+  list-style: none;
+  background-color: white;
+  padding: 0px 10px 10px 10px;
+  font-size: 16px;
+  font-family: lato;
+  color: #284f93;
+  text-align: left;
+  border-radius: 6px;
 }
 
 .option {
-    margin-top: 5px;
-    padding: 5px;
-    border-radius: 4px;
+  margin-top: 5px;
+  padding: 5px;
+  border-radius: 4px;
 }
 
 .option:hover {
-    background-color: #D1E2FF;
-    cursor: pointer;
+  background-color: #d1e2ff;
+  cursor: pointer;
 }
 
 .container {
-    position: relative;
+  position: relative;
 }
 
 .pageSelect {
-    font-family: lato;
-    font-size: 20px;
-    text-align: left;
+  font-family: lato;
+  font-size: 20px;
+  text-align: left;
 }
 
 .hidePageButton {
-    background-color: var(--color-lightBlue);
-    color: white;
-    margin-right: 10px;
+  background-color: var(--color-lightBlue);
+  color: white;
+  margin-right: 10px;
 }
 
 .showTitle {
-    font-size: 16px;
-    font-family: lato;
-    font-weight: 400;
-    margin: 10px 0px;
+  font-size: 16px;
+  font-family: lato;
+  font-weight: 400;
+  margin: 10px 0px;
 }
 
 .container {
-    text-align: center;
-    padding: 20px;
+  text-align: center;
+  padding: 20px;
 }
