--- a/frontend/src/components/Reviews/components/ReviewsDropdown/ReviewsDropdown.module.css
+++ b/frontend/src/components/Reviews/components/ReviewsDropdown/ReviewsDropdown.module.css
@@ -1,53 +1,53 @@
 .container {
-    background-color: #284F93;
-    color: white;
-    display: flex;
-    margin: auto;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 10px 10px 20px;
-    border-radius: 8px;
+  background-color: #284f93;
+  color: white;
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px 10px 20px;
+  border-radius: 8px;
 }
 
 .addReview {
-    padding: 5px 10px;
-    font-size: 16px;
-    font-family: lato;
-    color: #284F93;
-    background-color: white;
-    border-radius: 8px;
-    border: none;
-    cursor: pointer;
+  padding: 5px 10px;
+  font-size: 16px;
+  font-family: lato;
+  color: #284f93;
+  background-color: white;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
 }
 
 .reviewNumber {
-    font-family: lato;
-    font-size: 22px;
-    margin-right: 20px;
+  font-family: lato;
+  font-size: 22px;
+  margin-right: 20px;
 }
 
 .reviewFilter {
-    font-family: lato;
-    font-size: 15px;
+  font-family: lato;
+  font-size: 15px;
 }
 
 .reviewFilter:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .image {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 @media (max-width: 600px) {
-    .image {
-        display: none;
-    }
-    .reviewNumber {
-        display: none;
-    }
-    .reviewFilter {
-        display: inline-block;
-        margin-right: 10px;
-    }
+  .image {
+    display: none;
+  }
+  .reviewNumber {
+    display: none;
+  }
+  .reviewFilter {
+    display: inline-block;
+    margin-right: 10px;
+  }
 }
