--- a/frontend/src/components/Reviews/components/ReviewsTexts/components/ReviewsText.module.css
+++ b/frontend/src/components/Reviews/components/ReviewsTexts/components/ReviewsText.module.css
@@ -1,69 +1,69 @@
 .container {
-    border-radius: 16px;
-    margin-top: 20px;
-    padding: 30px 70px;
-    width: 100%;
-    box-shadow: 0px 3px 6px #B9B9B9;
-    text-align: left;
-    position: relative;
-    transition: all .5s ease;
+  border-radius: 16px;
+  margin-top: 20px;
+  padding: 30px 70px;
+  width: 100%;
+  box-shadow: 0px 3px 6px #b9b9b9;
+  text-align: left;
+  position: relative;
+  transition: all 0.5s ease;
 }
 
 .title {
-    font-family: raleway;
-    font-size: 22px;
-    font-weight: 600;
-    color: #3a3a3a;
-    margin-bottom: 10px;
+  font-family: raleway;
+  font-size: 22px;
+  font-weight: 600;
+  color: #3a3a3a;
+  margin-bottom: 10px;
 }
 
 .date {
-    font-family: raleway;
-    font-size: 16px;
-    font-weight: 400;
-    color: #3a3a3a;
-    margin-bottom: 10px;
+  font-family: raleway;
+  font-size: 16px;
+  font-weight: 400;
+  color: #3a3a3a;
+  margin-bottom: 10px;
 }
 
 .workloadTitle {
-    font-family: raleway;
-    font-size: 18px;
-    color: #3a3a3a;
-    margin-top: 20px;
-    font-weight: 400;
+  font-family: raleway;
+  font-size: 18px;
+  color: #3a3a3a;
+  margin-top: 20px;
+  font-weight: 400;
 }
 
 .content {
-    font-family: lato;
-    font-size: 16px;
-    font-weight: 400;
-    margin-top: 5px;
-    color: #3a3a3a;
-    max-width: 1000px;
+  font-family: lato;
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 5px;
+  color: #3a3a3a;
+  max-width: 1000px;
 }
 
 .break {
-    max-width: 1000px;
-    margin-bottom: 20px;
+  max-width: 1000px;
+  margin-bottom: 20px;
 }
 
 .agree {
-    color: #162D45;
-    font-size: 16px;
-    font-family: lato;
-    border: none;
-    background-color: white;
-    margin-right: 40px;
-    margin-top: 20px;
+  color: #162d45;
+  font-size: 16px;
+  font-family: lato;
+  border: none;
+  background-color: white;
+  margin-right: 40px;
+  margin-top: 20px;
 }
 
 @media (max-width: 500px) {
-    .container {
-        padding: 30px 30px;
-        max-height: 500px;
-        overflow-y: hidden;
-    }
-    .expanded {
-        max-height: 1000px;
-    }
+  .container {
+    padding: 30px 30px;
+    max-height: 500px;
+    overflow-y: hidden;
+  }
+  .expanded {
+    max-height: 1000px;
+  }
 }
