--- a/frontend/src/components/ReviewsSidebar/components/TeachesCard/TeachesCard.module.css
+++ b/frontend/src/components/ReviewsSidebar/components/TeachesCard/TeachesCard.module.css
@@ -1,61 +1,62 @@
 .link {
-    background-color: #D1E2FF;
-    padding: 10px;
-    margin: 15px;
-    display: block;
-    color: #284F93;
-    border-radius: 8px;
-    text-align: left;
-    text-decoration: none;
-    position: relative;
-    max-width: 500px;
+  background-color: #d1e2ff;
+  padding: 10px;
+  margin: 15px;
+  display: block;
+  color: #284f93;
+  border-radius: 8px;
+  text-align: left;
+  text-decoration: none;
+  position: relative;
+  max-width: 500px;
 }
 
 .link:hover {
-    left: 10px;
+  left: 10px;
 }
 
 .title {
-    font-family: raleway;
-    font-size: 20px;
-    font-weight: 500;
-    color: #162D45;
-    margin: 20px;
-    text-align: left;
+  font-family: raleway;
+  font-size: 20px;
+  font-weight: 500;
+  color: #162d45;
+  margin: 20px;
+  text-align: left;
 }
 
 .container {
-    border-radius: 13px;
-    box-shadow: 0px 3px 6px #B9B9B9;
-    padding: 10px;
-    width: 100%;
-    margin: auto;
-    margin-top: 15px;
+  border-radius: 13px;
+  box-shadow: 0px 3px 6px #b9b9b9;
+  padding: 10px;
+  width: 100%;
+  margin: auto;
+  margin-top: 15px;
+  max-height: 250px;
 }
 
 @media (max-width: 1200px) {
-    .link {
-        display: inline-block;
-        margin: 3px;
-    }
-    .container {
-        margin: 0px;
-        width: 65%;
-        text-align: left;
-        max-height: 200px;
-        overflow: scroll;
-    }
+  .link {
+    display: inline-block;
+    margin: 3px;
+  }
+  .container {
+    margin: 0px;
+    width: 65%;
+    text-align: left;
+    overflow: scroll;
+  }
 }
 
 @media (max-width: 900px) {
-    .container {
-        width: 48%;
-        height: 200px;
-    }
+  .container {
+    margin: 0px;
+    width: 48%;
+  }
 }
 
 @media (max-width: 500px) {
-    .container {
-        width: 100%
-    }
+  .container {
+    margin: 0px;
+    width: 100%;
+  }
 }
