--- a/frontend/src/screens/About/About.module.css
+++ b/frontend/src/screens/About/About.module.css
@@ -1,35 +1,35 @@
-@import '../../vars.css';
+@import "../../vars.css";
 
 #aboutContainer {
-    text-align: center;
+  text-align: center;
 }
 
 .titleContainer {
-    border: 1px solid red;
-    font-family: 'Raleway';
-    margin: auto;
-    font-size: 2.125rem;
-    color: var(--color-darkestBlue);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0px;
-    
+  border: 1px solid red;
+  font-family: "Raleway";
+  margin: auto;
+  font-size: 2.125rem;
+  color: var(--color-darkestBlue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0px;
 }
 
 .logo {
-    color: var(--color-lightBlue);
+  color: var(--color-lightBlue);
 }
 
 #image {
-    /* color: var(--color-darkestBlue) */
-    /* quick fix to convert svg to darkestBlue color */
-    filter: brightness(0) saturate(100%) invert(12%) sepia(38%) saturate(1331%) hue-rotate(173deg) brightness(94%) contrast(89%);
+  /* color: var(--color-darkestBlue) */
+  /* quick fix to convert svg to darkestBlue color */
+  filter: brightness(0) saturate(100%) invert(12%) sepia(38%) saturate(1331%)
+    hue-rotate(173deg) brightness(94%) contrast(89%);
 }
 
 .aboutContent {
-    max-width: 750px;
-    width: 75%;
-    margin: auto;
-    border: 1px solid red;
+  max-width: 750px;
+  width: 75%;
+  margin: auto;
+  border: 1px solid red;
 }
