--- a/frontend/src/screens/Submit/Submit.module.css
+++ b/frontend/src/screens/Submit/Submit.module.css
@@ -1,93 +1,93 @@
 .container {
-    width: 40%;
-    margin: auto;
-    border-radius: 15px;
-    text-align: left;
-    position: relative;
+  width: 40%;
+  margin: auto;
+  border-radius: 15px;
+  text-align: left;
+  position: relative;
 }
 
 @media (max-width: 1000px) {
-    .container {
-        width: 60%;
-    }
+  .container {
+    width: 60%;
+  }
 }
 
 @media (max-width: 750px) {
-    .container {
-        width: 80%;
-    }
+  .container {
+    width: 80%;
+  }
 }
 
 .back {
-    color: #162D45;
-    font-family: lato;
-    font-size: 18px;
-    margin-top: 20px;
-    margin-bottom: 40px;
+  color: #162d45;
+  font-family: lato;
+  font-size: 18px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .form {
-    text-align: left;
-    border-radius: 15px;
-    box-shadow: 0px 3px 6px rgb(92, 92, 92);
-    padding: 40px 40px 40px 40px;
+  text-align: left;
+  border-radius: 15px;
+  box-shadow: 0px 3px 6px rgb(92, 92, 92);
+  padding: 40px 40px 40px 40px;
 }
 
 .break {
-    color: #162D45;
-    margin-top: 3px;
-    margin-bottom: 20px;
+  color: #162d45;
+  margin-top: 3px;
+  margin-bottom: 20px;
 }
 
 .icon {
-    position: absolute;
-    left: 8%;
-    top: 40px;
+  position: absolute;
+  left: 8%;
+  top: 40px;
 }
 
 .label {
-    display: block;
-    margin-bottom: 5px;
-    margin-top: 15px;
-    font-family: lato;
-    font-weight: 700;
-    color: #162D45;
+  display: block;
+  margin-bottom: 5px;
+  margin-top: 15px;
+  font-family: lato;
+  font-weight: 700;
+  color: #162d45;
 }
 
 .title {
-    font-family: raleway;
-    font-size: 26px;
-    font-weight: 700;
-    color: #162D45;
+  font-family: raleway;
+  font-size: 26px;
+  font-weight: 700;
+  color: #162d45;
 }
 
 .input {
-    width: 100%;
-    padding: 10px;
-    border-radius: 7px;
-    border: none;
-    background-color: #dae8ff;
+  width: 100%;
+  padding: 10px;
+  border-radius: 7px;
+  border: none;
+  background-color: #dae8ff;
 }
 
 .largeInput {
-    height: 100px;
+  height: 100px;
 }
 
 .terms {
-    font-style: italic;
-    font-size: 14px;
-    font-family: lato;
-    color: rgb(102, 102, 102);
-    margin: auto;
+  font-style: italic;
+  font-size: 14px;
+  font-family: lato;
+  color: rgb(102, 102, 102);
+  margin: auto;
 }
 
 .button {
-    margin-top: 10px;
-    padding: 7px 15px;
-    background-color: #284F93;
-    border-radius: 8px;
-    color: white;
-    font-family: lato;
-    border: none;
-    cursor: pointer;
+  margin-top: 10px;
+  padding: 7px 15px;
+  background-color: #284f93;
+  border-radius: 8px;
+  color: white;
+  font-family: lato;
+  border: none;
+  cursor: pointer;
 }
