--- a/frontend/src/components/ReviewsSidebar/ReviewsSidebar.module.css
+++ b/frontend/src/components/ReviewsSidebar/ReviewsSidebar.module.css
@@ -4,10 +4,12 @@
   border: 3px solid red;
   text-align: center;
   padding: 20px;
+  width: 30%;
 }
 
 @media (max-width: 1200px) {
   .container {
+    width: 100%;
     flex-direction: row;
     justify-content: space-between;
   }
@@ -15,6 +17,7 @@
 
 @media (max-width: 500px) {
   .container {
+    width: 100%;
     flex-direction: column;
   }
 }
