--- a/frontend/src/screens/Home/Home.module.css
+++ b/frontend/src/screens/Home/Home.module.css
@@ -16,6 +16,18 @@
   top: 100px;
   right: -7%;
   min-width: 300px;
+  animation: 1s ease-out 0s 1 slideInFromLeft;
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(10%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .homeIntro {
