--- a/frontend/src/screens/Data/Data.module.css
+++ b/frontend/src/screens/Data/Data.module.css
@@ -1,3 +1,4 @@
+@import "../../vars.css";
 .container {
   margin: auto;
   text-align: center;
@@ -7,22 +8,90 @@
   font-family: raleway;
   font-size: 32px;
   font-weight: 600;
-}
-
-.lineGraph {
-  width: 500px;
-  height: 500px;
+  margin: 20px auto;
+  text-align: center;
 }
 
 .chartContainer {
-  width: 50%;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  margin: 30px auto;
 }
 
-.lineContainer {
-  width: 50%;
+.chart {
+  width: 60%;
+  box-shadow: 0px 3px 6px #b9b9b9;
+  border-radius: 10px;
+  padding: 20px;
+  margin-left: 20px;
+  height: 400px;
+}
+
+.scatterChart {
+  width: 80%;
+  margin: auto;
+  box-shadow: 0px 3px 6px #b9b9b9;
+  border-radius: 10px;
+  padding: 20px;
   height: 500px;
 }
 
-.scatterContainer {
+.filterButton {
+  border: 2px solid var(--color-lightBlue);
+  color: var(--color-lightBlue);
+  background-color: white;
+  margin: 5px;
+}
+
+.filterButtonSelected {
+  background-color: var(--color-lightBlue);
+  color: white;
+  margin: 5px;
+}
+
+.scatter {
+  width: 100% !important;
+  margin: auto !important;
+  text-align: center !important;
+  border: 4px solid red;
+}
+
+/* test stuf ----------- */
+.chartContainerTest {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  margin: 30px auto;
+}
+
+.chartScatter {
   width: 100%;
+  box-shadow: 0px 3px 6px #b9b9b9;
+  border-radius: 10px;
+  padding: 20px;
+  height: 400px;
+}
+
+/* test stuf =========== */
+
+@media (max-width: 900px) {
+  .chartContainer {
+    flex-direction: column;
+  }
+  .chart {
+    width: 100%;
+    margin-left: 0px;
+  }
+}
+
+@media (max-width: 900px) {
+  .chartContainer {
+    width: 90%;
+  }
+  .scatterChart {
+    width: 90%;
+  }
 }
