--- a/frontend/src/components/AboutBulletPoint/AboutBulletPoint.module.css
+++ b/frontend/src/components/AboutBulletPoint/AboutBulletPoint.module.css
@@ -1,6 +1,6 @@
 @import "../../vars.css";
 .text {
-  font-size: 16px;
+  font-size: 1rem;
   font-family: Lato;
   font-weight: 400;
 }
@@ -8,9 +8,9 @@
 .title {
   font-family: Raleway;
   font-weight: 500;
-  font-size: 22px;
+  font-size: 1.375rem;
 }
 
 .container {
-  padding-bottom: 15px;
+  padding-bottom: 1rem;
 }
