--- a/frontend/src/components/ExpandButton/ExpandButton.module.css
+++ b/frontend/src/components/ExpandButton/ExpandButton.module.css
@@ -1,17 +1,17 @@
+@import "../../vars.css";
 .expand {
   border: none;
-  color: blue;
-  background-color: red;
+  background-color: var(--color-darkBlue);
   display: none;
   position: absolute;
-  border-radius: 5px;
+  border-radius: 0.313rem;
   font-family: Lato;
-  font-size: 14px;
+  font-size: 0.875rem;
   box-shadow: 0px 3px 6px #b9b9b9;
 }
 
 .triangle {
-  width: 20px;
+  width: 1.25rem;
   transition: transform 0.5s;
 }
 
@@ -26,7 +26,7 @@
 @media (max-width: 500px) {
   .expand {
     display: block;
-    bottom: 5px;
+    bottom: 0.313rem;
     width: 90%;
     left: 0;
     right: 0;
