--- a/frontend/src/components/Searchbar/components/Result.module.css
+++ b/frontend/src/components/Searchbar/components/Result.module.css
@@ -1,3 +1,4 @@
+@import "../../../vars.css";
 .result {
   border: none;
   border-radius: 6px;
@@ -5,7 +6,7 @@
   font-family: lato;
   font-size: 16;
   background-color: white;
-  color: #676767;
+  color: var(--color-textGray);
   text-align: left;
   padding-left: 10px;
   margin-bottom: 2px;
