--- a/frontend/src/vars.css
+++ b/frontend/src/vars.css
@@ -7,4 +7,7 @@
   --color-gold: #ffdf2e;
   --color-orange: #ff9e2e;
   --color-textGray: #3a3a3a;
+
+  --color-agree: #3fb54d;
+  --color-disagree: #de4343;
 }
