--- a/frontend/src/screens/Submit/Submit.module.css
+++ b/frontend/src/screens/Submit/Submit.module.css
@@ -21,10 +21,13 @@
 
 .back {
   color: var(--color-darkestBlue);
-  font-family: lato;
-  font-size: 18px;
+  font-family: raleway;
+  font-size: 20px;
   margin-top: 20px;
   margin-bottom: 40px;
+  font-weight: 600;
+  border: none;
+  background-color: transparent;
 }
 
 .form {
@@ -32,6 +35,7 @@
   border-radius: 15px;
   box-shadow: 0px 3px 6px rgb(92, 92, 92);
   padding: 40px 40px 40px 40px;
+  position: relative;
 }
 
 .break {
@@ -43,7 +47,7 @@
 .icon {
   position: absolute;
   left: 8%;
-  top: 40px;
+  top: -25px;
 }
 
 .label {
