hide nav button on small width

--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -44,3 +44,13 @@
     width: 180px;
   }
 }
+
+@media (max-width: 500px) {
+  .navButton {
+    display: none;
+  }
+  .navContainer {
+    display: inline;
+    width: auto;
+  }
+}
