--- a/frontend/src/screens/Reviews/Review.module.css
+++ b/frontend/src/screens/Reviews/Review.module.css
@@ -3,6 +3,10 @@
   justify-content: center;
 }
 
+.loadingContainer {
+  margin-top: 7rem;
+}
+
 @media (max-width: 1200px) {
   .container {
     flex-direction: column;
