--- a/frontend/src/components/Reviews/components/ReviewsTexts/components/ReviewsText.module.css
+++ b/frontend/src/components/Reviews/components/ReviewsTexts/components/ReviewsText.module.css
@@ -67,6 +67,11 @@
   margin-top: 20px;
 }
 
+.newReview {
+  border: 2px solid var(--color-agree);
+  box-shadow: 0px 3px 6px var(--color-agree);
+}
+
 @media (max-width: 500px) {
   .container {
     padding: 30px 30px;
@@ -74,7 +79,7 @@
     overflow-y: hidden;
   }
   .expanded {
-    max-height: 1000px;
+    max-height: 2000px;
   }
   .reactions {
     margin-bottom: 25px;
