--- a/frontend/src/components/Submit/SearchInput/SearchInput.module.css
+++ b/frontend/src/components/Submit/SearchInput/SearchInput.module.css
@@ -1,6 +1,5 @@
 .terms {
   font-style: italic;
-  font-size: 14px;
   font-family: lato;
   color: var(--color-textGray);
   margin: auto;
@@ -8,16 +7,16 @@
 
 .input {
   width: 100%;
-  padding: 10px;
-  border-radius: 7px;
+  padding: 0.625rem;
+  border-radius: 0.438rem;
   border: none;
   background-color: var(--color-lightestBlue);
 }
 
 .label {
   display: block;
-  margin-bottom: 5px;
-  margin-top: 15px;
+  margin-bottom: 0.313rem;
+  margin-top: 1rem;
   font-family: lato;
   font-weight: 700;
   color: var(--color-darkestBlue);
